# git-learning-agent

./: .gitignore  CONTRIBUTING.md  README.md  context.md  development_plan.md  git-learning-system.spec  pyproject.toml  pytest.ini  setup.cfg  test_development_plan.txt
.github/workflows/: ci.yml
data/: git_learning.db
git_learning_system/project_modules/: project_based_learning.py
scripts/: __init__.py  build_release.py
src/: __init__.py  cli.py  exercises.py  feedback.py  feedback_templates.py  integration_layer.py  learning_paths.py  main.py  models.py  progress_visualization.py  repository.py  test_progress_visualization.py
src/cli/: __init__.py  learning_cli.py
src/database/: __init__.py  init_db.py  optimized_queries.py  persistence_layer.py
src/education/: __init__.py  adaptive_learning.py  analytics.py  socratic_method.py  spaced_repetition.py
src/exercises/: __init__.py  exercise_validator.py  intermediate.py
src/feedback/: __init__.py  assistance.py  categories.py  constants.py  feedback_manager.py  hint_generator.py  templates.py
src/models/: __init__.py  exercise.py  git_command.py  progress.py  user_profile.py
src/utils/: __init__.py  performance.py  resource_manager.py
tests/: conftest.py  test_adaptive_learning.py  test_analytics.py  test_cli.py  test_exercise_validation.py  test_exercises.py  test_feedback.py  test_feedback_templates.py  test_hint_generator.py  test_integration_layer.py  test_intermediate.py  test_learning_paths.py  test_models.py  test_progress_visualization.py  test_repository.py  test_socratic_method.py  test_spaced_repetition.py
tests/cli/: test_learning_cli.py
tests/database/: test_persistence_layer.py
tests/deployment/: test_build_release.py
tests/project_modules/: test_project_based_learning.py
