[tool.poetry]
name = "git-learning-agent-update"
version = "0.1.0"
description = "An interactive educational tool to learn Git."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
importlib-metadata = "^4.13.0"  # Pin to a specific version
pytest = "^6.2"
black = "^21.9b0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
flake8 = "^5.0.0"  # Pin to a specific version
black = "^21.9b0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning:unittest.case"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
