[tool.poetry]
name = "git-learning-agent"
version = "0.1.0"
description = "An AI-powered Git learning system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
importlib-metadata = "^4.13.0"  # Pin to a specific version
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::RuntimeWarning:unittest.case"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
